fixed another map overlay layout bug

--- a/style/tracker/map.scss
+++ b/style/tracker/map.scss
@@ -251,6 +251,7 @@
 
     .map-overlay-body {
         display: flex;
+        flex-wrap: wrap;
         width: 100%;
         height: 100%;
         overflow: auto;
@@ -330,85 +331,81 @@
         }
     }
 
-    &#shop-view {
-        flex-wrap: wrap;
-        
-        .shop {
-            border: solid 1px white;
-            padding: 20px;
-            margin: 20px;
+    &#shop-view .shop {
+        border: solid 1px white;
+        padding: 20px;
+        margin: 20px;
 
-            .shop-title {
+        .shop-title {
+            color: white;
+
+            .shop-edit {
+                -webkit-appearance: none;
+                -moz-appearance: none;
+                appearance: none;
                 color: white;
+                background-color: black;
+                border: solid 1px white;
+                margin-left: 5px;
+                cursor: pointer;
 
-                .shop-edit {
-                    -webkit-appearance: none;
-                    -moz-appearance: none;
-                    appearance: none;
-                    color: white;
-                    background-color: black;
-                    border: solid 1px white;
-                    margin-left: 5px;
-                    cursor: pointer;
-
-                    &:hover {
-                        color: black;
-                        background-color: white;
-                    }
+                &:hover {
+                    color: black;
+                    background-color: white;
                 }
             }
+        }
 
-            .shop-body {
-                display: grid;
-                grid-template-columns: repeat(4, 150px);
-                grid-template-rows: repeat(2, 120px);
-                grid-gap: 5px;
-                margin-top: 10px;
+        .shop-body {
+            display: grid;
+            grid-template-columns: repeat(4, 150px);
+            grid-template-rows: repeat(2, 120px);
+            grid-gap: 5px;
+            margin-top: 10px;
 
-                .shop-item {
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    justify-content: flex-start;
-                    padding: 5px;
-                    border: solid 1px white;
-                    user-select: none;
-                    cursor: pointer;
+            .shop-item {
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: flex-start;
+                padding: 5px;
+                border: solid 1px white;
+                user-select: none;
+                cursor: pointer;
 
-                    .shop-item-image {
-                        display: block;
-                        height: 32px;
-                        width: 32px;
+                .shop-item-image {
+                    display: block;
+                    height: 32px;
+                    width: 32px;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                }
+
+                .shop-item-title {
+                    display: block;
+                    word-wrap: break-word;
+                    overflow: hidden;
+                    width: 100%;
+                    font-size: 0.7em;
+                    flex: 1;
+                }
+
+                .shop-item-price {
+                    display: block;
+                    width: 100%;
+                    font-size: 0.7em;
+                    text-align: right;
+
+                    &:after {
+                        display: inline-block;
+                        width: 10px;
+                        height: 10px;
+                        margin-left: 5px;
+                        background-image: url('../images/rupees.png');
+                        background-size: 14px;
                         background-position: center;
                         background-repeat: no-repeat;
-                    }
-
-                    .shop-item-title {
-                        display: block;
-                        word-wrap: break-word;
-                        overflow: hidden;
-                        width: 100%;
-                        font-size: 0.7em;
-                        flex: 1;
-                    }
-
-                    .shop-item-price {
-                        display: block;
-                        width: 100%;
-                        font-size: 0.7em;
-                        text-align: right;
-
-                        &:after {
-                            display: inline-block;
-                            width: 10px;
-                            height: 10px;
-                            margin-left: 5px;
-                            background-image: url('../images/rupees.png');
-                            background-size: 14px;
-                            background-position: center;
-                            background-repeat: no-repeat;
-                            content: " ";
-                        }
+                        content: " ";
                     }
                 }
             }
